--- a/src/sections/home/feature.astro
+++ b/src/sections/home/feature.astro
@@ -68,7 +68,7 @@ import SectionHeader from '../../components/section-header.astro';
 	.feature-icon {
 		width: 2rem;
 		height: 2rem;
-		color: var(--color-primary);
+		color: var(--color-primary-text);
 		z-index: 2;
 	}
 </style>
