--- a/src/sections/home/pricing.astro
+++ b/src/sections/home/pricing.astro
@@ -84,7 +84,7 @@ import { Check } from 'lucide-astro';
 	}
 
 	.price {
-		color: var(--color-primary);
+		color: var(--color-primary-text);
 	}
 
 	.pricing-card ul li {
