--- a/src/layouts/main-layout.astro
+++ b/src/layouts/main-layout.astro
@@ -1,4 +1,5 @@
 ---
+import { ViewTransitions } from 'astro:transitions';
 import '../styles/reset.css';
 import '../styles/tailwind.css';
 import '../styles/themes/base.css';
@@ -47,6 +48,7 @@ type Props = {
 		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&display=swap" rel="stylesheet" />
 
 		<script src="/src/scripts/theme.js"></script>
+	<ViewTransitions />
 
 		<!-- Google tag (gtag.js) -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-VX2NGYBNRV"></script>
